feat: change structure MethodNode